trunk/Archive2/9a/3825237f22b2bc/output/output
main.cpp:2:1: error: unknown type name 'optional'
optional<THit3<T>> intersect( const TRay3<T>& ray, const RPlane<T>& target ) {
^
main.cpp:2:9: error: expected unqualified-id
optional<THit3<T>> intersect( const TRay3<T>& ray, const RPlane<T>& target ) {
        ^
2 errors generated.
